--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "start": "concurrently --kill-others \"json-server --watch db.json --port 5000\" \"react-scripts start\"",
+    "start": "concurrently --kill-others \"json-server --watch db.json --port 5000\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
